--- a/Home.html
+++ b/Home.html
@@ -49,7 +49,7 @@
         </div>
 
         <footer>
-            <p id="footer_text"><img src="assets\Logo.png" alt="Tech_logo" width="30" height="30" > &nbsp Technical Board AIT</p>
+            <p id="footer_text"><img src="assets\Logo.png" alt="Tech_logo" width="30" height="30" > &nbsp Technical Board AIT. Made in 2022</p>
         </footer>
     </body>
     
